name:                glazier-pipes
version:             0.1.0.0
synopsis:            Converts Glazier widgets into a signal framework using Pipes
description:         Please see README.md
homepage:            https://github.com/louispan/glazier-pipes#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Glazier.Pipes.Strict
                       Glazier.Pipes.Lazy
  build-depends:       base >= 4.7 && < 5
                     , glazier
                     , mtl
                     , pipes
                     , pipes-misc
                     , transformers
                     , writer-cps-mtl
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-pipes
